# proplot

./: .codacy.yaml  .codacy.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .vimsession  CHANGELOG.rst  CODEOFCONDUCT.md  CONSTANTS.py  CONTRIBUTING.rst  HOWTOCONTRIBUTE.rst  HOWTORELEASE.rst  INSTALL.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  WHATSNEW.rst  ____init.py  __init__.py  cmap.txt  colors.py  const.py  env.yml  fontsetup  install  notebook  numerics.py  plot.py  plots.py  pyproject.toml  readthedocs.yml  requirements.txt  setup  setup.cfg  setup.py  tools.py
.github/: ISSUE_TEMPLATE.md
__trash__/: basics.py  graticule2.py  ncutils_separate_ncdate.py  plotutils_before_formatfunc.py  plotutils_before_subplotspec.py  timeconvert_old.py  unitfix.py
ci/: environment.yml  run-linter.sh
cmaps/: Algae.rgb  Beach.rgb  Bog.npy  DryWet.npy  Ember.rgb  Forest.npy  Ocean.npy  Pale.npy  PaleRainbow  Pastels.hex  Phase.rgb  Sea.npy  SoftRainbow.npy  Sunrise.npy  Sunset.npy  Vibrant.npy  Water.npy  cbBR2.rgb  cbBR3.rgb  cbBlue1.rgb  cbDW.rgb  cbDry2.rgb  cbGP2.rgb  cbMono.rgb  cbPurple1.rgb  cbPurple2.rgb  cbWet2.rgb  cpGreen1.hex  daveBR3.rgb  hclBR1.rgb  hclBR2.rgb  hclFire.rgb  hclHot.rgb  hclMidnight.rgb  hclNeat.rgb  hclPink.rgb  hclPretty.rgb  hclPurple.rgb  hclRain2.rgb  hclRainbow2.rgb  (+1 more)
colors/: xkcd.txt
docs/: .gitattributes  .gitconfig  .proplotrc  1dplots.ipynb  1dplots.py  2dplots.ipynb  2dplots.py  Makefile  api.rst  authors.rst  axes.rst  axis.ipynb  axis.py  axistools.rst  basics.ipynb  basics.py  basics.rst  cartesian.ipynb  cartesian.py  cartesian.rst  colorbars_legends.ipynb  colorbars_legends.py  colormaps.ipynb  colormaps.py  colors.ipynb  colors.py  colors.rst  colors_fonts.ipynb  colors_fonts.py  colortools.rst  conf.py  configuration.rst  contributions.rst  create.rst  customizing.ipynb  cycles.ipynb  cycles.py  demos.rst  documentation.rst  environment.yml  (+83 more)
explot/: __init__.py  axis.py  base.py  colortools.py  rcmod.py  subplots.py
fonts/: Courier-18.bdf  Geneva-18.bdf  Geneva-20.bdf  Geneva-24.bdf  Helvetica-12.bdf  Helvetica-14.bdf  Helvetica-18.bdf  Helvetica-24.bdf  Helvetica-9.bdf  Monaco9-9.bdf  Palatino.ttc  Untitled1-11.bdf  Untitled1-12.bdf  Untitled1-16.bdf  Untitled10-11.bdf  Untitled2-11.bdf  Untitled2-12.bdf  Untitled2-14.bdf  Untitled2-18.bdf  Untitled3-10.bdf  Untitled3-12.bdf  Untitled3-15.bdf  Untitled3-27.bdf  Untitled4-15.bdf  Untitled4-18.bdf  Untitled4-20.bdf  Untitled4-22.bdf  Untitled5-11.bdf  Untitled5-12.bdf  Untitled5-15.bdf  Untitled6-13.bdf  Untitled6-23.bdf  Untitled6-30.bdf  Untitled7-12.bdf  Untitled7-13.bdf  Untitled8-13.bdf  Untitled9-11.bdf
learning/: completeyears.py  eraint.py  figformat.py  geoutils.py  geoutils_old.py  landfracs.py  latfix.py  plotutils_prelim.py  sciplotlib_special-axes.py  shared.py
notebooks/: logo.ipynb  nbconvert.sh
old/: downsample.py  geomean.py  ioutils.py  lonfix.py  ncutils_before_ndarray.py  properties.py  remapcon.py
panplot/: axis.py  base.py  colortools.py  fontscript.sh  fonttools.py  gridspec.py  rcmod.py  utils.py
params/: params.py
plot/: .vimsession  __init__.py  axis.py  base.py  colors.py  proj.py  rc.py  utils.py
proplot/: .proplotrc  .readthedocs.yaml  __init__.py  artist.py  axes.py  axis.py  axistools.py  base.py  colormath.py  colors.py  colortools.py  config.py  constructor.py  crs.py  demos.py  figure.py  fontscript.sh  fonttools.py  gridspec.py  notebook.py  proj.py  projs.py  rcmod.py  rctools.py  readthedocs.yml  scale.py  show.py  styletools.py  subplots.py  ticker.py  ui.py  utils.py  wrappers.py
pubplot/: __init__.py  abstract.py  axis.py  base.py  colormath.py  colors.py  colortools.py  fonttools.py  gridspec.py  notebook.py  palettes.py  proj.py  rc.py  rcmod.py  subplots.py  subplots_old.py  todo.py  utils.py  xkcd.txt
scripts/: pubplot_fonts
skyplot/: __init__.py  axis.py  base.py  colortools.py  gridspec.py  (+3 more)
(+946 files in other folders)
