[build-system]
requires = ["setuptools>=64",
            "setuptools_scm[toml]>=8",
            "wheel",
            "numpy>=1.26.0",
            "matplotlib>=3.9.1",
            ]
build-backend = "setuptools.build_meta"

[project]
name = "proplot"
authors = [
    {name = "Luke Davis", email = "lukelbd@gmail.com"},
]
maintainers = [
    {name = "Luke Davis", email = "lukelbd@gmail.com"},
]
description = "A succinct matplotlib wrapper for making beautiful, publication-quality graphics."
readme = "README.rst"
requires-python = ">=3.6.0"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies= [
  'importlib-metadata; python_version>"3.8"',

]
dynamic = ["version"]


[project.urls]
"Documentation" = "https://proplot.readthedocs.io"
"Issue Tracker" = "https://github.com/proplot-dev/proplot/issues"
"Source Code" = "https://github.com/proplot-dev/proplot"

[project.entry-points."setuptools.finalize_distribution_options"]
setuptools_scm = "setuptools_scm._integration.setuptools:infer_version"



[tool.setuptools]
packages = ["proplot"]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

