[metadata]
name = proplot
author = Luke Davis
author_email = lukelbd@gmail.com
maintainer = Luke Davis
maintainer_email = lukelbd@gmail.com
license = MIT
description = A succinct matplotlib wrapper for making beautiful, publication-quality graphics.
url = https://proplot.readthedocs.io
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

project_urls =
    Bug Tracker = https://github.com/lukelbd/proplot/issues
    Documentation = https://proplot.readthedocs.io
    Source Code = https://github.com/lukelbd/proplot

[options]
packages = proplot
setup_requires = setuptools>=44; toml; setuptools_scm>=3.4.3
install_requires = matplotlib
include_package_data = True
python_requires = >=3.6.0
