[metadata]
name = proplot
author = Luke Davis
author_email = lukelbd@gmail.com
maintainer = Luke Davis
maintainer_email = lukelbd@gmail.com
license = MIT
description = A succinct matplotlib wrapper for making beautiful, publication-quality graphics.
url = https://proplot.readthedocs.io
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Documentation = https://proplot.readthedocs.io
    Issue Tracker = https://github.com/proplot-dev/proplot/issues
    Source Code = https://github.com/proplot-dev/proplot

[options]
packages = proplot
install_requires =
    matplotlib>=3.0.0
    numpy
include_package_data = True
python_requires = >=3.6.0
